<resources>
    <string name="app_name">Document_Scanner</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Full name</string>
    <string name="dob">date of birth</string>
    <string name="id">id</string>
    <string name="hometown">hometown</string>
    <string name="address">address</string>
    <string name="confirm">confirm</string>

    <string-array name="document_type">
        <item>Paper</item>
        <item>CID</item>
    </string-array>
</resources>