<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.Document_Scanner"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_primary_dark"
    android:padding="20dp">

    <EditText
        android:id="@+id/editableID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/id"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/custom_id_icon"
        android:background="@drawable/custom_input"
        android:maxLines="1"
        android:inputType="number"
        android:textColor="@color/white_font"

        />

    <EditText
        android:id="@+id/editableName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/editableID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/white_font"
        />

    <EditText
        android:id="@+id/editableDOB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/editableName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/dob"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_dob_icon"
        android:maxLines="1"
        android:inputType="date"
        android:textColor="@color/white_font"
        />

    <EditText
        android:id="@+id/editableHometown"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/editableDOB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/hometown"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_hometown_icon"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/white_font"
        />

    <EditText
        android:id="@+id/editableAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/editableHometown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/address"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_address_icon"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/white_font"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/editableAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm"
        app:backgroundTint="@color/teal_font"
        android:textColor="@color/white_font"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:elevation="5dp"
        app:cornerRadius="10dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>